# psl_f24

./: .gitignore  pyproject.toml
coding_01/: Assignment_1_9601_netID.html  coding_01.py
coding_02/: Assignment_2_9601_netID.html  coding_02.py
coding_03/: Assignment_3_9601_netID.html  coding_03.py
coding_04/: Assignment_4_9601_netID.html  coding_04.py
coding_05/: Assignment_5_9601_netID.html  coding_05.py
project_01/: mymain.py  report.md  test_code.py
project_02/: .gitignore  eval_code.py  mymain.py  report.md  test_code.py
project_03/: Project_3_9601_netID.html  best_model.pkl  eval_code.py  mymain.py  notebook.py  test_code.py
quiz/: quiz.py
