[tool.poetry]
name = "psl-f24"
version = "0.1.0"
description = ""
authors = ["Chaojie Wang"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.1.1"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
tqdm = "^4.66.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
